--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,9 @@ body {
 .m-top-60{
   margin-top: 60px;
 }
+body header .m-top-34{
+  margin-top: 34px;
+}
 .m-bottom-60{
   margin-bottom: 60px;
 }
@@ -515,6 +518,10 @@ label{
 label:active{
   color: #b8b8b8;
 }
+.main-catalog{
+  display: flex;
+  width: 940px;
+}
 .price-filter{
   display: flex;
   flex-direction: column;
@@ -529,7 +536,7 @@ label:active{
 }
 .second-legend,
 .third-legend{
-  padding-top: 13px;
+  padding-top: 18px;
 }
 .price-range{
   width: 220px;
@@ -605,6 +612,14 @@ label:active{
   text-align: center;
   border-radius: 4px;
 }
+.min-price-value input,
+.max-price-value input{
+  border: none;
+  background-color: transparent;
+  text-align: center;
+  width: 95px;
+  height: 38px;
+}
 .line{
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 16px;
@@ -621,10 +636,11 @@ label:active{
   line-height: 38px;
   padding-left: 18px;
   border-radius: 4px;
-  margin: 20px 20px 10px 0;
+  margin: 20px 10px 16px 0;
 }
 .filter form legend{
-  padding-bottom: 13px;
+  padding-bottom: 18px;
+  line-height: 17px;
 }
 .section-header{
   width: 940px;
@@ -644,6 +660,7 @@ label:active{
 }
 .manufactures{
   display: flex;
+  padding-bottom: 20px;
 }
 .manufactures-input{
   display: none;
@@ -652,10 +669,27 @@ label:active{
   display: flex;
   flex-direction: column;
 }
-.manufactures-label label::before{
+.filter form fieldset label{
+  line-height: 15px;
+  cursor: pointer;
+}
+/* .manufactures-label label::before{
 content: "";
 display: inline-block;
+width: 23px;
+height: 23px;
+background-image: url("../img/checkbox-off-light.png");
+vertical-align: middle;
 }
+.manufactures-label label:hover::before{
+content: "";
+background-image: url("../img/checkbox-off-dark.png");
+}
+.manufactures-input input:checked + label::before{
+  width: 27px;
+  height: 23px;
+  background-image: url("../img/checkbox-on-light.png");
+} */
 .section-header .section-header-btn{
   font-size: 14px;
   line-height: 38px;
@@ -671,28 +705,72 @@ display: inline-block;
   margin-right: 24px;
 }
 .catalog .sorting{
-  width: 681px;
+  width: 665px;
   height: 38px;
   background-color: #f7f3ec;
   line-height: 38px;
-  padding-left: 19px;
+  padding-left: 20px;
   border-radius: 4px;
+  display: flex;
+  margin: 20px 0 10px 10px;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 15px;
 }
-.catalog button{
+.catalog .sorting h4{
+  padding-right: 140px;
+}
+.main-catalog .catalog .main-catalog-list{
+  margin-left: 10px;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.catalog .sorting button{
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
-  line-height: 18px;
+  line-height: 13px;
   font-weight: 400;
   text-transform: uppercase;
-  color: #cacaca;
+  color: #000000;
+  opacity: 0.3;
   border: none;
   border-bottom: 1px dotted #ee3643;
-  padding: 0;
   background: none;
+  padding: 0;
+  margin: 0;
 }
-.catalog button:hover{
+.catalog .sorting .buttons-filter{
+  width: 355px;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 25px;
+}
+.up-down-filter{
+  display: flex;
+}
+.catalog .sorting a{
+  display: inline-block;
+  padding-left: 21px;
+}
+.catalog .sorting a:hover svg polygon,
+.catalog .sorting a:hover svg polyline{
+  fill: #000000;
+}
+.catalog .sorting a:focus svg polygon,
+.catalog .sorting a:focus svg polyline{
+  fill: #ee3643;
+}
+.catalog .sorting button:hover{
   color: #000000;
+  opacity: 1;
   border-bottom: 1px solid #ee3643;
+}
+.catalog .sorting button:focus{
+  color: #ee3643;
+  opacity: 1;
+  border-bottom: none;
 }
 .filter button{
   font-family: "PT Sans", Arial, sans-serif;
@@ -710,7 +788,6 @@ display: inline-block;
   list-style: none;
   display: flex;
   margin: 0;
-  padding: 10px 0;
   justify-content: space-between;
 }
 .catalog ul li span{
@@ -788,22 +865,14 @@ display: inline-block;
 }
 .pages{
   list-style: none;
-}
-.pages li:first-child{
-  font-family: "PT Sans", Arial, sans-serif;
-  font-size: 13px;
-  color: #ffffff;
-  width: 38px;
-  height: 38px;
-  line-height: 38px;
-  text-align: center;
-  background-color: #ee3643;
-  border-radius: 4px;
+  display: flex;
+  margin: 42px 0 60px 240px;
 }
 .pages li{
   font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
   text-transform: uppercase;
+  margin-right: 10px;
 }
 .pages a,
 .btn-show{
@@ -820,6 +889,7 @@ display: inline-block;
 .btn-show{
   width: 140px;
   height: 38px;
+  margin-top: 75px;
 }
 .pages .next-page{
   width: 140px;
@@ -837,6 +907,12 @@ display: inline-block;
 .pages a:active,
 .btn-show:active{
   border: 1.0px solid #ee3643;
+}
+.pages a:focus{
+color: #ffffff;
+line-height: 38px;
+background-color: #ee3643;
+border-radius: 4px;
 }
 .services-sliders{
   display: flex;
@@ -985,6 +1061,9 @@ display: inline-block;
   text-transform: uppercase;
   color: #ffffff;
   margin-top: auto;
+}
+.post-scriptum{
+  padding: 67px 0;
 }
 .post-scriptum p{
   font-family: "PT Sans", Arial, sans-serif;
