--- a/css/style.css
+++ b/css/style.css
@@ -1598,6 +1598,21 @@ border-radius: 4px;
 .second-footer a:active{
   color: #e53643;
 }
+.write-us{
+  width: 620px;
+  height: 310px;
+  background-color: #ffffff;
+  border-top: 7px solid #ff5257;
+  box-shadow: 0px 20px 40px 0px rgba(0,0,0,0.75);
+  position: absolute;
+  left: 50%;
+  top: 2504px;
+  margin-left: -310px;
+}
+.write-us-footer{
+  height: 112px;
+  background-color: #f4f4f4;
+}
 .visually-hidden{
   position: absolute;
 
